V4.3 - Fixed the overflowing homepage image text box

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -821,7 +821,8 @@ header {
 .strategy-group,
 .repeat-box,
 .calendar,
-.month-title {
+.month-title,
+.homepage-img-txt-box {
     max-width: 1140px;
     width: 90%;
 }
